tests/fixtures/invalid/unsupported_try.nl
fn main -> i64
    try
        1
    0
